api/crates/postgres/tests/integration/replicas/snapshots/integration__replicas__create____test_context_wrapped_first_replica_without_thumbnail_succeeds.snap
---
source: crates/postgres/tests/integration/replicas/create.rs
expression: ctx.queries()
---
[[queries]]
sql = '''
SELECT
  "id",
  "created_at",
  "updated_at"
FROM
  "media"
WHERE
  "id" = $1
FOR UPDATE'''
rows_affected = 1
rows_returned = 1

[[queries]]
sql = '''
SELECT
  COUNT(*) + 1
FROM
  "replicas"
WHERE
  "medium_id" = $1'''
rows_affected = 1
rows_returned = 1

[[queries]]
sql = '''
INSERT INTO
  "replicas" (
    "medium_id",
    "display_order",
    "original_url",
    "mime_type",
    "width",
    "height",
    "phase"
  )
VALUES
  ($1, $2, $3, $4, $5, $6, $7)
RETURNING
  "id",
  "medium_id",
  "display_order",
  "original_url",
  "mime_type",
  "width",
  "height",
  "phase",
  "created_at",
  "updated_at"'''
rows_affected = 1
rows_returned = 1

[[queries]]
sql = '''
SELECT
  pg_notify($1, $2)'''
rows_affected = 1
rows_returned = 1

[[queries]]
sql = 'COMMIT'
rows_affected = 0
rows_returned = 0
